--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -1,10 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Bank nick name
+    {{data.bank_account.nick_name}}
 {% endblock %}
 
 {% block content %}
+    <h3>Expenses</h3>
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
                 <table class="table table-striped table-hover" id="expenses-table">
             <thead class="sticky-top">
