--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -5,8 +5,9 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Expenses</h3>
-    <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
+    <h3>{{ data.bank_account.nick_name }}</h3>
+    <h4 class="mt-2">Expenses</h4>
+    <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
             <thead class="sticky-top">
                 <tr>
@@ -35,4 +36,6 @@
             </tbody>
         </table>
     </div>
+    <p class="">Total: {{ data.total_expenses }}</p>
+
 {% endblock %}
