associated records templates show a '-' if one of the optional fields are empty

--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -25,8 +25,8 @@
                 <tr>
                     <th scope="row">{{ expense.id }}</th>
                     <td>{{ expense.amount }}</td>
-                    <td> - </td>
-                    <td>{{ expense.credit_card.nick_name }}</td>
+                    <td> {{ expense.description or '-' }} </td>
+                    <td>{{ expense.credit_card.nick_name or '-' }}</td>
                     <td>{{ expense.bank_account.nick_name }}</td>
                     <td>{{ expense.expense_category.name }}</td>
                     <td>{{ expense.created_at }}</td>
