--- a/app/templates/expense_categories/associated_records.html
+++ b/app/templates/expense_categories/associated_records.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    {{data.bank_account.nick_name}}
+    {{data.category_name}}
 {% endblock %}
 
 {% block content %}
-    <h3>{{ data.bank_account.nick_name }}</h3>
+    <h3>{{ data.category_name }}</h3>
     <h4 class="mt-2">Expenses</h4>
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
@@ -25,9 +25,9 @@
                 <tr>
                     <th scope="row">{{ expense.id }}</th>
                     <td>{{ expense.amount }}</td>
-                    <td> - </td>
-                    <td>{{ expense.credit_card.nick_name }}</td>
-                    <td>{{ expense.bank_account.nick_name }}</td>
+                    <td> {{ expense.description or '-' }} </td>
+                    <td>{{ expense.credit_card.nick_name or '-' }}</td>
+                    <td>{{ expense.bank_account.nick_name or '-' }}</td>
                     <td>{{ expense.expense_category.name }}</td>
                     <td>{{ expense.created_at }}</td>
                 </tr>
