--- a/app/templates/expense_categories/associated_records.html
+++ b/app/templates/expense_categories/associated_records.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    {{data.category_name}}
+    {{data.category.name}}
 {% endblock %}
 
 {% block content %}
-    <h3>{{ data.category_name }}</h3>
+    <h3>{{ data.category.name }}</h3>
     <h4 class="mt-2">Expenses</h4>
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
