new function return money

--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -404,6 +404,7 @@
                 headers: {'X-Requested-With': 'XMLHttpRequest'}
             })
             .then(async response => {
+                console.log(formData.get('is-cash'));
                 const data = await response.json();
                 if(!response.ok){
                     console.log(response.json());
