--- a/app/templates/expense_categories/index.html
+++ b/app/templates/expense_categories/index.html
@@ -58,7 +58,7 @@
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense-category">New Expense Category</button>
         <div class="row">
             <div class="col-sm">
-                <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px; max-width: fit-content;">
+                <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px; max-width:max-content">
                     <table class="table table-striped  table-hover">
                         <thead class="sticky-top">
                             <tr>
@@ -73,20 +73,24 @@
                                 <th scope="row">{{ expense_category.id }}</th>
                                 <td>{{ expense_category.name }}</td>
                                 <td>
-                                    <div class="d-flex gap-2">
-                                        <button 
-                                            type="button" 
-                                            class="btn btn-success" 
-                                            data-bs-toggle="modal" 
-                                            data-bs-target="#edit-expense-category"
-                                            data-id="{{ expense_category.id }}"
-                                            data-name="{{ expense_category.name }}"
-                                        >
-                                        Edit
-                                        </button>
-                                        <form action="{{ url_for('expense_category.delete', id=expense_category.id) }}" method="post">
-                                            <button type="submit" class="btn btn-danger">Delete</button>
-                                        </form>
+                                    <div class="row">
+                                        <div class="col-sm my-1">
+                                            <button 
+                                                type="button" 
+                                                class="btn btn-success" 
+                                                data-bs-toggle="modal" 
+                                                data-bs-target="#edit-expense-category"
+                                                data-id="{{ expense_category.id }}"
+                                                data-name="{{ expense_category.name }}"
+                                            >
+                                            Edit
+                                            </button>
+                                        </div>
+                                        <div class="col-sm my-1">
+                                            <form action="{{ url_for('expense_category.delete', id=expense_category.id) }}" method="post">
+                                                <button type="submit" class="btn btn-danger">Delete</button>
+                                            </form>
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
@@ -96,11 +100,16 @@
                 </div>
             </div>
             <div class="col-sm">
-                
+                <div>
+                    <canvas id="totals-per-category"></canvas>
+                </div>
             </div>
         </div>
-    </div>   
+    </div> 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <script src="../../static/scripts/expense_category/script.js"></script>
+    <script src="../../static/scripts/expense_category/stats.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const editExpenseCategory = document.getElementById('edit-expense-category');
