error message corrected

--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -232,7 +232,7 @@
                 Swal.fire({
                     icon: 'error',
                     title: 'Error',
-                    text: data.error || 'Something went wrong while creating the expense.'
+                    text: data.error || 'Something went wrong while creating the income.'
                 });
                 return;
             }
