--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -58,7 +58,7 @@
         </form>
     </section>
     <section class="modal fade" tabindex="-1" id="edit-credit-card">
-        <form action="{{ url_for('credit_card.update' ) }}" method="POST">
+        <form action="{{ url_for('credit_card.update' ) }}" method="POST" id="edit-credit-card-form">
             <input type="hidden" name="id" id="cc-id"> 
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -105,7 +105,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="button" class="btn btn-primary" id="btn-edit-credit-card">Save</button>
                     </div>
                 </div>
             </div>
