--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -220,9 +220,7 @@
                                 data-description="{{ expense.description }}"
                             >Edit
                             </button>
-                            <form action="{{ url_for('expense.delete', id=expense.id) }}" method="POST">
-                                <button type="submit" class="btn btn-danger">Delete</button>
-                            </form>
+                            <a href="{{ url_for('expense.delete', id=expense.id) }}" class="btn btn-danger">Delete</a>
                         </div>
                     </td>
                 </tr>
@@ -254,6 +252,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/expenses/filteringByTime.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/expenses/filterByCash.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/expenses/warnings.js' ) }}"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const cCheckbox = document.getElementById("checkNativeSwitch");
