--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -252,7 +252,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/expenses/filteringByTime.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/expenses/filterByCash.js') }}"></script>
-    <script src="{{ url_for('static', filename='scripts/expenses/warnings.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const cCheckbox = document.getElementById("checkNativeSwitch");
