--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -136,9 +136,7 @@
                                 >
                                 Edit
                                 </button>
-                                <form action="{{ url_for('income.delete', id=income.id ) }}" method="post">
-                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                </form>
+                                <a href="{{ url_for('income.delete', id=income.id ) }}" class="btn btn-danger">Delete</a>
                             </div>
                         </td>
                     </tr>
@@ -150,6 +148,8 @@
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
+
 <script> 
     document.addEventListener('DOMContentLoaded', () => {
         const createIncomeModal = document.getElementById('create-income');
