--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -87,9 +87,7 @@
                                 >
                                 Edit
                                 </button>
-                                <form action="{{ url_for('bank.delete', id=bank.id ) }}" method="post">
-                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                </form>
+                                <a href="{{ url_for('bank.delete', id=bank.id ) }}" class="btn btn-danger">Delete</a>
                             </div>
                         </td>
                     </tr>
@@ -98,6 +96,10 @@
             </table>
         </div>
     </div>
+
+    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
