Add new link for accounts receivable in layout template

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('expense_category.index' ) }}">Expense Category</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('accounts_receivable.index' ) }}">Accounts Receivable</a>
+                    </li>
                 </ul>
             </div>
         </div>
